Removed ids in html

--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel 
 </head>
 <body>
 	<h1>Tic Tac Toe</h1>
 	<table>
 		<tr>
-			<td id="top-left" class="box"></td>
-			<td id="top-mid" class="box vertical"></td>
-			<td id="top-right" class="box"></td>
+			<td class="box"></td>
+			<td class="box vertical"></td>
+			<td class="box"></td>
 		</tr>
 		<tr>
-			<td id="center-left" class="box horizontal"></td>
-			<td id="center-mid" class="box vertical horizontal"></td>
-			<td id="center-right" class="box horizontal"></td>
+			<td class="box horizontal"></td>
+			<td class="box vertical horizontal"></td>
+			<td class="box horizontal"></td>
 		</tr>
 		<tr>
-			<td id="bot-left" class="box"></td>
-			<td id="bot-mid" class="box vertical"></td>
-			<td id="bot-right" class="box"></td>
+			<td class="box"></td>
+			<td class="box vertical"></td>
+			<td class="box"></td>
 		</tr>
 	</table>
 	<script type="text/javascript" src="app.js"></script>
