Added Scores and a Reset Board button

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel 
+	<link href="https://fonts.googleapis.com/css?family=Finger+Paint" rel="stylesheet">
 </head>
 <body>
 	<h1>Tic Tac Toe</h1>
+	<section class="container">
+		<div id="p1">Player One Score: <span id="p1Score">0</span></div>
+		<button id="reset">Reset Board</button>
+		<div id="p2">Player Two Score: <span id="p2Score">0</span></div>
+	</section>
+	<p> </p>
 	<table>
 		<tr>
 			<td class="box"></td>
